<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <ImageView
        android:contentDescription="@string/guide_page3_background_description"
        android:id="@id/view_scroller"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:src="@mipmap/rent_feature_bg3" />

    <LinearLayout
        android:id="@id/scrolling_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginTop="@dimen/margin_top"
        android:orientation="vertical">

        <TextView
            android:id="@id/feature_content_bg3_row1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginStart="@dimen/margin_left"
            android:layout_marginTop="@dimen/word_margin_top"
            android:text="@string/guide_page3_content_row1"
            android:textColor="@android:color/white"
            android:textSize="@dimen/name_size"
            android:visibility="visible" />

        <TextView
            android:id="@id/feature_content_bg3_row2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="@dimen/margin_left_pop"
            android:layout_marginStart="@dimen/margin_left_pop"
            android:layout_marginTop="@dimen/word_margin_top"
            android:text="@string/guide_page3_content_row2"
            android:textColor="@android:color/white"
            android:textSize="@dimen/word_size"
            android:visibility="visible" />

        <TextView
            android:id="@id/feature_content_bg3_row3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="@dimen/margin_left_pop"
            android:layout_marginStart="@dimen/margin_left_pop"
            android:layout_marginTop="@dimen/word_margin_top"
            android:text="@string/guide_page3_content_row3"
            android:textColor="@android:color/white"
            android:textSize="@dimen/word_size"
            android:visibility="visible" />

        <TextView
            android:id="@id/feature_content_bg3_row4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="@dimen/margin_left_pop"
            android:layout_marginStart="@dimen/margin_left_pop"
            android:layout_marginTop="@dimen/word_margin_top"
            android:text="@string/guide_page3_content_row4"
            android:textColor="@android:color/white"
            android:textSize="@dimen/word_size"
            android:visibility="visible" />

        <TextView
            android:id="@id/feature_content_bg3_row5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="@dimen/margin_left_pop"
            android:layout_marginStart="@dimen/margin_left_pop"
            android:layout_marginTop="@dimen/word_margin_top"
            android:text="@string/guide_page3_content_row5"
            android:textColor="@android:color/white"
            android:textSize="@dimen/word_size"
            android:visibility="visible" />

        <ImageView
            android:contentDescription="@string/guide_page_messages"
            android:id="@id/feature_bg3_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="@dimen/margin_left_pop"
            android:layout_marginStart="@dimen/margin_left_pop"
            android:layout_marginTop="8dp"
            android:src="@mipmap/rent_feature_bg3_icon"
            android:visibility="visible" />

        <ImageView
            android:contentDescription="@string/guide_page3_dialog"
            android:id="@id/feature_bg3_pop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:src="@mipmap/rent_feature_bg3_pop"
            android:visibility="visible" />
    </LinearLayout>
    <Button
        android:id="@+id/guide_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="30dp"
        android:background="@color/blink"
        android:textColor="@color/red"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/enter"/>
    <ImageView
        android:contentDescription="@string/app_name"
        android:id="@id/arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="5dp"
        android:src="@mipmap/rent_feature_arrow" />
</FrameLayout>